# MODIFI

./: .gitignore  README.md  analyze_RM.py  assess_clustering.py  batch_plasmid.py  benchmark.data.source.txt  benchmark.py  bin.py  borg  break_our_contigs.py  cal_correlation.py  cal_invasion_score.py  check_ipd.py  collect_motifs.py  comp_ipd_ratio.py  control_model.py  coverage_status.py  ctg_cov_dist.py  derep_motifs.py  detect_linkage.py  detect_methy2.py  detect_methy3.py  env.yml  estimate_linkage.py  evaluate_base_accuracy.py  expore_missed_motif.py  filter_bam.py  find_informative_motifs.py  find_motif.py  generate_contig_list.py  generate_training.py  get_100_matched_bam.py  get_baseline.py  get_baseline2.py  get_baseline3.py  get_baseline4.py  get_control_train.py  get_control_train2.py  get_data.py  get_kmer_freq.py  (+45 more)
assembly_pipe/: alignbam2raw.sh  annotation.smk  assembly.smk  assembly_pipeline.sh  backup_linkage.sh  batch_submit.py  batch_submit_iso.py  borgs_mp_nanopore.borgs.tsv  classify_hifi_subreads.py  config.yaml  config_soil.yaml  count_NM.py  count_assembly.py  drep.smk  find_MGE.smk  find_borg.py  get_funny_ctgs.py  get_hifi.sh  get_high_cov_ctgs.py  gg_rename_assembly_iso.py  gtdb_isolation.smk  host.smk  isolation.smk  merge_MGEs.py  methy_isolation.smk  methylation.smk  prefix_table.tab  prefix_table2.tab  prefix_table_soil.tab  run.sh  run_all_isolation.sh  run_allison_data.sh  run_allison_data_batch.sh  run_anno.sh  run_asthma.sh  run_borg.sh  run_drep.sh  run_methy2.sh  run_methy_isolation.sh  run_orphan.sh  (+15 more)
benchmark/: bench.sh
src/: test  (+6 more)
(+384 files in other folders)
